--- a/params.yaml
+++ b/params.yaml
@@ -4,6 +4,11 @@ Data_upload:
     a: "train1.csv"
     b: "test1.csv"
     c: "stud1.csv"
+  upload_from_gcp:
+    json_file_path: "C:\\Users\\User\\Desktop\\DQM\\Data_Quality\\credentials-python-storage.json"
+    bucket_name: "tmrw_scraping_data"
+    file_path_name: "pdp/ajio/2023/01/14/PDP_Ajio_2023_01_13_PDP_Batch 8_500_Products20230113.csv"
+    cloud_name: "gcp"
 base:
   random_state: 42
   test_split_ratio: 0.2
